fix: table overflow on mobile viewport

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -428,7 +428,13 @@ tr:nth-child(even) {
   .footer .mobile-hidden {
     display: none;
   }
+
   .theme-controls {
     margin-top: -16px;
+  }
+
+  table {
+    overflow-x: auto;
+    display: block;
   }
 }
